--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <!-- Privacy Policy Page -->
       <div id="privacy-page" class="page-content">
-        <h2 class="mb-6 text-3xl font-bold" style="color: #000000;">Privacy Policy</h2>
+        <h2 class="mb-6 text-3xl font-bold" style="color: #000000;">Privacy Policy for Etsy Tracker</h2>
         
         <div class="space-y-6" style="color: #000000;">
           <p class="text-sm mb-4" style="color: #333333;">Last updated: December 12, 2025</p>
@@ -139,81 +139,98 @@
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Introduction</h3>
             <p class="leading-relaxed">
-              This privacy policy describes how the Etsy Tracker app ("we", "our", or "us") handles your information. We are committed to protecting your privacy and being transparent about our data practices.
+              This Privacy Policy explains how Etsy Tracker ("we," "our," or "us") handles your information. We are committed to protecting your privacy and being fully transparent about our data practices.
             </p>
           </div>
 
           <div>
-            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data Collection</h3>
+            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data We Do NOT Collect</h3>
             <p class="leading-relaxed mb-3">
-              <strong>We do not collect, store, or transmit any personal data.</strong>
-            </p>
-            <p class="leading-relaxed">
-              The Etsy Tracker is designed to work entirely on your device. All calculations you perform and any data you enter remain solely on your device and are never sent to us or any third party. We have no access to your information.
-            </p>
-          </div>
-
-          <div>
-            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Information We Do NOT Collect</h3>
-            <p class="leading-relaxed mb-2">
-              We do not collect:
+              Etsy Tracker is designed to work 100% on your device. We do not collect, store, share, or transmit any personal data whatsoever. Specifically, we do not collect:
             </p>
             <ul class="list-disc list-inside space-y-1 ml-4">
               <li>Personal identification information</li>
-              <li>Financial data or calculations you enter</li>
-              <li>Usage data or analytics</li>
-              <li>Device information</li>
+              <li>Financial data, sales figures, or any calculations you enter</li>
+              <li>Usage data or analytics (except Apple's anonymized App Store Analytics — see below)</li>
+              <li>Device identifiers, IP addresses, or advertising IDs</li>
               <li>Location data</li>
-              <li>Any other personal information</li>
+              <li>Any other personal or sensitive information</li>
             </ul>
-          </div>
-
-          <div>
-            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data Storage</h3>
-            <p class="leading-relaxed">
-              The Etsy Tracker does not store any data you enter. All calculations are performed in real-time and are not saved to your device or anywhere else. Once you close the app or navigate away, your entered data is cleared.
+            <p class="leading-relaxed mt-3">
+              All data you enter stays only on your device and is never sent to us or any third party.
             </p>
           </div>
 
           <div>
-            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">App Store Analytics</h3>
+            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data Storage & Retention</h3>
+            <p class="leading-relaxed mb-3">
+              Etsy Tracker does not permanently store any data you enter. All calculations are performed in real-time in your device's memory. As soon as you close the app, or clear the input fields, the data is automatically deleted from memory.
+            </p>
             <p class="leading-relaxed">
-              We use Apple's App Store Analytics to understand basic usage patterns such as app downloads, sessions, and crashes. This data is collected and managed entirely by Apple and is provided to us in an aggregated, anonymized format. We cannot identify individual users from this information. For more details on how Apple handles this data, please refer to Apple's Privacy Policy.
+              Since no data ever leaves your device, there is nothing for us to retain or delete.
+            </p>
+          </div>
+
+          <div>
+            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data Use & Consent</h3>
+            <p class="leading-relaxed">
+              Since we collect no data, we do not use any data and no user consent is required.
+            </p>
+          </div>
+
+          <div>
+            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">App Store Analytics (Apple-provided)</h3>
+            <p class="leading-relaxed mb-3">
+              We use only Apple's built-in App Store Analytics to see aggregated and anonymized information such as total app downloads, crashes, and sessions. This data is collected and processed solely by Apple. We cannot identify individual users, and Apple provides the same or higher level of privacy protection described in this policy.
+            </p>
+            <p class="leading-relaxed mb-3">
+              For details, see Apple's Privacy Policy: <a href="https://www.apple.com/legal/privacy/" target="_blank" class="text-primary hover:underline">https://www.apple.com/legal/privacy/</a>
+            </p>
+            <p class="leading-relaxed">
+              We do not use any other third-party analytics, advertising, tracking, or SDKs.
             </p>
           </div>
 
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Third-Party Services</h3>
-            <p class="leading-relaxed">
-              Apart from Apple's App Store Analytics mentioned above, we do not use any other third-party analytics, advertising, or tracking services.
+            <p class="leading-relaxed mb-3">
+              Currently, the only third-party service involved is Apple (via App Store distribution and App Store Analytics). We confirm that Apple offers privacy protections that meet or exceed those stated in this policy.
             </p>
-          </div>
-
-          <div>
-            <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Future Updates</h3>
             <p class="leading-relaxed">
-              We plan to add in-app purchase functionality in future updates. If this changes our data collection practices, we will update this privacy policy and notify users accordingly before implementing any data collection.
+              If we ever add new third-party services in the future, we will only partner with providers who offer equivalent or stronger privacy protection, and we will update this policy before any change takes effect.
             </p>
           </div>
 
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Children's Privacy</h3>
             <p class="leading-relaxed">
-              Our service is not directed to children under the age of 13, and we do not knowingly collect personal information from children under 13.
+              Etsy Tracker is not directed to children under 13 years of age, and we do not knowingly collect personal information from children under 13.
             </p>
           </div>
 
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Changes to This Privacy Policy</h3>
             <p class="leading-relaxed">
-              We may update our privacy policy from time to time. We will notify you of any changes by posting the new privacy policy on this page and updating the "Last updated" date.
+              We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page and updating the "Last updated" date. If future updates involve any data collection, we will provide prominent notice inside the app and obtain your consent where required.
             </p>
           </div>
 
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Contact Us</h3>
-            <p class="leading-relaxed">
-              If you have any questions about this privacy policy, please contact us at: <a href="mailto:John.newman920@icloud.com" class="text-primary hover:underline">John.newman920@icloud.com</a>
+            <p class="leading-relaxed mb-3">
+              If you have any questions about this Privacy Policy, data deletion requests, or anything else, please contact us at:
+            </p>
+            <p class="leading-relaxed mb-2">
+              <strong>Email:</strong> <a href="mailto:privacy@etsytracker.app" class="text-primary hover:underline">privacy@etsytracker.app</a>
+            </p>
+            <p class="leading-relaxed mb-3">
+              <strong>Alternative/backup:</strong> <a href="mailto:john.newman920@icloud.com" class="text-primary hover:underline">john.newman920@icloud.com</a>
+            </p>
+            <p class="leading-relaxed mb-3">
+              We will respond to all requests within 30 days (usually much faster).
+            </p>
+            <p class="leading-relaxed font-semibold">
+              Thank you for using Etsy Tracker!
             </p>
           </div>
         </div>
