--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Contact Us</h3>
             <p class="leading-relaxed mb-3">
-              If you have any questions about this Privacy Policy, data deletion requests, or anything else, please contact us at:
+              If you have any questions about this Privacy Policy, please contact us at:
             </p>
             <p class="leading-relaxed mb-2">
               <strong>Email:</strong> <a href="mailto:privacy@etsytracker.app" class="text-primary hover:underline">privacy@etsytracker.app</a>
@@ -263,4 +263,5 @@
 </script>
 </body>
 </html>
+
 
