--- a/index.html
+++ b/index.html
@@ -217,17 +217,11 @@
             <p class="leading-relaxed mb-3">
               If you have any questions about this Privacy Policy, please contact us at:
             </p>
-            <p class="leading-relaxed mb-2">
-              <strong>Email:</strong> <a href="mailto:privacy@etsytracker.app" class="text-primary hover:underline">privacy@etsytracker.app</a>
-            </p>
             <p class="leading-relaxed mb-3">
-              <strong>Alternative/backup:</strong> <a href="mailto:john.newman920@icloud.com" class="text-primary hover:underline">john.newman920@icloud.com</a>
-            </p>
-            <p class="leading-relaxed mb-3">
-              We will respond to all requests within 30 days (usually much faster).
+              </strong> <a href="mailto:john.newman920@icloud.com" class="text-primary hover:underline">john.newman920@icloud.com</a>
             </p>
             <p class="leading-relaxed font-semibold">
-              Thank you for using Etsy Tracker!
+              Thank you for enjoying Etsy Tracker!
             </p>
           </div>
         </div>
@@ -263,5 +257,6 @@
 </script>
 </body>
 </html>
+
 
 
