--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data Storage</h3>
             <p class="leading-relaxed mb-3">
-              relationship boss stores data locally on your device using Apple's SwiftData framework. All information you enter—including contacts, relationships, notes, and any other data—is stored exclusively on your device and is never transmitted to our servers or any third party.
+              relationship boss stores data locally on your device using Apple's SwiftData framework. Any information you enter is stored exclusively on your device and is never transmitted to any servers or any third party.
             </p>
             <p class="leading-relaxed">
               This means your data remains completely private and under your control at all times.
@@ -271,11 +271,10 @@
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data We Do NOT Collect</h3>
             <p class="leading-relaxed mb-3">
-              While the app stores your data locally on your device, we do not collect, transmit, or have access to any of your personal data. Specifically, we do not collect:
+              The app stores your data locally on your device, so we do not collect, transmit, or have access to any of your personal data. Specifically, we do not collect:
             </p>
             <ul class="list-disc list-inside space-y-1 ml-4">
               <li>Personal identification information</li>
-              <li>Contact information or relationship data you enter</li>
               <li>Usage data or analytics (except Apple's anonymized App Store Analytics — see below)</li>
               <li>Device identifiers, IP addresses, or advertising IDs</li>
               <li>Location data</li>
@@ -299,7 +298,7 @@
           <div>
             <h3 class="mb-3 text-lg font-semibold" style="color: #000000;">Data Use & Consent</h3>
             <p class="leading-relaxed">
-              Since we collect no data and all information stays on your device, we do not use any data and no user consent is required for data transmission or sharing.
+              Since we collect no data and all information stays on your device, we do not use any data and therefore no user consent is required for data transmission or sharing.
             </p>
           </div>
 
@@ -382,3 +381,4 @@
 </script>
 </body>
 </html>
+
