--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
           <div class="mb-6">
             <h4 class="mb-2 text-lg font-semibold" style="color: #000000;">mohka</h4>
             <p class="text-base leading-relaxed" style="color: #000000;">
-              Calculate your potential Etsy profit with a SINGLE button! Just add your products' sale price & costs. More updates to come. Watch this space.
+              Calculate your potential Etsy profit with a SINGLE button! Just add your products' sale price & costs.
             </p>
           </div>
           
           <div class="mb-6">
             <h4 class="mb-2 text-lg font-semibold" style="color: #000000;">relationship boss</h4>
             <p class="text-base leading-relaxed" style="color: #000000;">
-              A relationship management app to help you stay connected with the people who matter most.
+              An app to help you compare how much work each partner has done around the house to help reduce and relieve household arguments.
             </p>
           </div>
         </div>
@@ -113,13 +113,6 @@
       <!-- User Support Page -->
       <div id="contact-page" class="page-content">
         <h2 class="mb-6 text-3xl font-bold" style="color: #000000;">User Support</h2>
-        
-        <div class="mb-8">
-          <h3 class="mb-4 text-xl font-semibold" style="color: #000000;">About Me</h3>
-          <p class="text-base leading-relaxed" style="color: #000000;">
-            I'm a passionate iOS developer with a focus on creating intuitive and engaging mobile experiences. I strive to build apps that are both functional and aesthetically pleasing. My portfolio showcases a range of projects, each reflecting my commitment to both functional and visual quality, as well as innovation.
-          </p>
-        </div>
 
         <div class="mb-8">
           <h3 class="mb-4 text-xl font-semibold" style="color: #000000;">Get In Touch</h3>
@@ -381,4 +374,5 @@
 </script>
 </body>
 </html>
+
 
