--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="mb-8">
           <h3 class="mb-4 text-xl font-semibold" style="color: #000000;">iOS Developer</h3>
           <p class="text-lg leading-relaxed mb-4" style="color: #000000;">
-            Welcome! I'm a passionate iOS developer with a focus on creating intuitive and engaging mobile experiences. I strive to build apps that are both functional and aesthetically pleasing.
+            Welcome! I'm a passionate iOS developer with a focus on creating intuitive and engaging iOS experiences. I strive to build apps that are both functional and aesthetically pleasing. My portfolio showcases a range of projects, each reflecting my commitment to both functional and visual quality, as well as innovation.
           </p>
           
           <h3 class="mb-4 text-xl font-semibold mt-8" style="color: #000000;">My Apps</h3>
@@ -374,5 +374,6 @@
 </script>
 </body>
 </html>
+
 
 
