--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="mb-6">
             <h4 class="mb-2 text-lg font-semibold" style="color: #000000;">relationship boss</h4>
             <p class="text-base leading-relaxed" style="color: #000000;">
-              An app to help you compare how much work each partner has done around the house to help reduce and relieve household arguments.
+              Record and compare how much work each partner has done around the house to help reduce and relieve household arguments.
             </p>
           </div>
         </div>
@@ -374,6 +374,7 @@
 </script>
 </body>
 </html>
+
 
 
 
